# Edusolve

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
api/: cerebras_client.py  cohere_client.py  gemini_client.py  groq_client.py  huggingface_client.py  llm_router.py  mistral_client.py  openrouter_client.py
config/: settings.py
extraction/: image_extractor.py  qb_cleaner.py  text_extractor.py
generation/: answer_generator.py  booklet_compiler.py
question_generation/: qb_generator.py
rag/: document_processor.py  embedder.py  retriever.py  vector_store.py
utils/: document_converter.py  file_handler.py  logger.py
vector_stores/CBT/: documents.pkl  faiss.index
